Modified to taste

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Miquel Arranz – Front-End Developer</title>
+    <title>Alfred Mohenu Adjei – Front-End Developer</title>
     <link href="https://fonts.googleapis.com/css?family=Raleway:900|Roboto" rel="stylesheet">
     <script defer type="text/javascript" src="js/main.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.0/js/all.js"></script>
@@ -21,16 +21,16 @@
           <img
             id="pictureImage"
             class="picture-image"
-            src="images/miquel.jpg"
-            srcset="images/miquel.png 1x, images/miquel@2x.png 2x, images/miquel@3x.png 3x"
-            alt="Portrait of Miquel Arranz"
+            src="images/alfred.jpg"
+            srcset="images/alfred.jpg 1x, images/alfred@2x.jpg 2x, images/alfred@3x.jpg 3x"
+            alt="Portrait of Alfred Mohenu"
             width="320"
-            height="320">
+            height="443">
         </figure>
       </aside>
       <main class="about">
         <h1 class="name">
-          I'm Miquel Arranz
+          I'm Alfred M. Adjei
         </h1>
         <p class="job">
           Front-End Developer
@@ -38,28 +38,28 @@
         <hr class="hr">
         <div class="description">
           <p>
-            Software Engineer. Design Patterns passionate.
-            UX/UI lover. Bootstrapper. Blog Writer.
+            Web Developer. Mostly frontend focused.
+            Open-Source. Blog Writer.
           </p>
         </div>
         <div class="contact">
-          <a class="button" href="mailto:miquelarranz@gmail.com">
+          <a class="button" href="mailto:alfmohenu@gmail.com">
             Get in touch
           </a>
         </div>
         <ul class="social">
           <li>
-            <a href="https://twitter.com/miquel_arranz">
+            <a href="https://twitter.com/alfieedo">
               <i class="fab fa-twitter"></i>
             </a>
           </li>
           <li>
-            <a href="https://github.com/miquelarranz">
+            <a href="https://github.com/alfmoh">
               <i class="fab fa-github"></i>
             </a>
           </li>
           <li>
-            <a href="https://www.linkedin.com/in/miquel-arranz-santa-olalla-31257890/">
+            <a href="https://www.linkedin.com/in/alfred-mohenu-adjei-5b10475a/">
               <i class="fab fa-linkedin"></i>
             </a>
           </li>
